tests/negative/neg_own_lifetime.safe
-- Test: neg_own_lifetime
-- Description: Returning a borrowed access value that depends on a local owner.
--   The borrowed access value would outlive the lender's scope once
--   returned from the function.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a:5bc5ab8b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.4a.p102a-a:ae729065
-- Expected: REJECT lifetime_violation

package lifetime_test

   subtype value is integer (0 to 100);
   type value_ptr is access value;

   --  Leak_Borrow: returns a borrow tied to a local owner.
   function leak_borrow returns access value
      owner : value_ptr = new (42 as value);
      ref   : access value = owner;

      return ref;  -- ERROR: borrowed value outlives local owner

